[project]
name = "lagrange"
version = "4.0.1"
description = """\
    Pure-Python implementation of Lagrange \
    interpolation over finite fields.\
    """
license = "MIT"
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/lapets/lagrange"
Documentation = "https://lagrange.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=7.4",
    "sphinx-rtd-theme~=3.0",
    "sphinx-autodoc-typehints~=2.3"
]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0"
]
lint = [
    "pylint~=3.3"
]
coveralls = [
    "coveralls~=4.0"
]
publish = [
    "build~=1.3",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=77.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=lagrange --cov-report term-missing"
